almost finish, need to clean code

--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
 <!-- section 1 -->
   <section class="section-info">
 
-      <h1>Supernope</h1>
+      <h1>Some Nope</h1>
 
 
     <div class="container-info">
-      <div class="info">
-        <img class="img-section-info" src="img/spider-1.jpeg" alt="spider-jacket" />
-        <div class=text">Nope Leather jacket</div>
+      <div class="img1 info">
+        <img class="img-info" src="img/spider-1.jpg" alt="spider-jacket" />
+        <div class=text">Long legs Nope</div>
       </div>
 
-      <div class="info">
-        <img class="img-section-info" src="img/spider-2.jpeg" alt="spider-jacket" />
-        <div class=text">Nopeminion </div>
+      <div class="img2 info">
+        <img class="img-info" src="img/spider-2.jpg" alt="spider-jacket" />
+        <div class=text">Four eyes Nope</div>
       </div>
 
-      <div class="info">
-        <img class="img-section-info" src="img/spider-3.jpeg" alt="spider-jacket" />
-        <div class=text">Nopeteen </div>
+      <div class="img3 info">
+        <img class="img-info" src="img/spider-3.jpg" alt="spider-jacket" />
+        <div class=text">Another four eyes Nope</div>
       </div>
 
-      <div class="info">
-        <img class="img-section-info" src="img/spider-4.jpeg" alt="spider-jacket" />
-        <div class=text">Nopebaby</div>
+      <div class="img4 info">
+        <img class="img-info" src="img/spider-4.jpg" alt="spider-jacket" />
+        <div class=text">Blue Nope</div>
       </div>
     </div>
   </section>
@@ -69,9 +69,9 @@
   <section class="section-quote">
     <figure class="quote">
       <blockquote>
-        "Playing super hero isn't a game. It's fate. We choose to do good. Choose to do bad. We had a choice."
+        "I used to imagine the spider creeping down, crawling into my mouth, sliding down my throat, and laying loads of eggs in my belly. The Baby spiders would hatch after a while and eat me alive, from the inside out."
       </blockquote>
-      <figcaption>&mdash; Spiderman, <cite>'Spider-Man', Vol 1 #7, 1991.</cite></figcaption>
+      <figcaption>&mdash; Darren Shan</figcaption>
     </figure>
   </section>
 
@@ -79,15 +79,16 @@
   <section class="section-sign">
     <div class="div-sign">
       <div class="sign-text">
-        <h1>Call to action! It's time!</h1>
-        <p>It's time to becoome your own Supernope by clicking that button right over there!</p>
+        <h1>Need a Flammenwerfer?</h1>
+        <p>Can burn your house with the spider inside in a minute!</p>
       </div>
-      <button id="sign-bottom">Sign up</button>
+      <button id="shop-bottom">shop now</button>
     </div>
   </section>
 
   <footer>
     Copyright &copy; The Nope Project by <em>lolikana</em> 2021
   </footer>
+
 </body>
 </html>
