change header h1 name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- section in the header -->
     <div class="div-header">
       <div class="header-text">
-        <h1>This is a Nopeman page</h1>
+        <h1>This is a Nope page</h1>
         <p>The following content may contain elements that are not suitable for some audiences. Viewer discretions is advised.</p>
         <button id="sign-top">Run away</button>
       </div>
