correct flex image

--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
     <div class="container-info">
       <div class="img1 info">
         <img class="img-info" src="img/spider-1.jpg" alt="spider-jacket" />
-        <div class=text">Long legs Nope</div>
+        <div class="text">Long legs Nope</div>
       </div>
 
       <div class="img2 info">
         <img class="img-info" src="img/spider-2.jpg" alt="spider-jacket" />
-        <div class=text">Four eyes Nope</div>
+        <div class="text">Four eyes Nope</div>
       </div>
 
       <div class="img3 info">
         <img class="img-info" src="img/spider-3.jpg" alt="spider-jacket" />
-        <div class=text">Another four eyes Nope</div>
+        <div class="text">Another four eyes Nope</div>
       </div>
 
       <div class="img4 info">
         <img class="img-info" src="img/spider-4.jpg" alt="spider-jacket" />
-        <div class=text">Blue Nope</div>
+        <div class="text">Blue Nope</div>
       </div>
     </div>
   </section>
