--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
 
   </header>
 
-<!-- section 1 -->
+  <!-- section 1 -->
   <section class="section-info">
-
-      <h1>Some Nope</h1>
+    <div>
+      <h1 id="title-info">Some Nope</h1>
+    </div>
 
     <div class="container-info">
       <div class="img1 info">
@@ -90,4 +91,5 @@
   </footer>
 
 </body>
+
 </html>
